maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value x
      if(aBiscuit(x,y)){
                  ^JediEscaper:21: error: not found: value y
      if(aBiscuit(x,y)){
                    ^JediEscaper:27: error: not found: value posX
  setIndication(posX,posY,0)
                ^JediEscaper:27: error: not found: value posY
  setIndication(posX,posY,0)
                     ^JediEscaper:31: error: value t is not a member of Int
      for(y<- 0 t getMondeHauteur()){
                ^